# AI-Resume-Analyzer

./: .gitignore  .vercel-deploy  .vercelignore  AUDIT_REPORT.md  CHANGELOG.md  COMPLETION_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY.md  DEPLOYMENT_SUMMARY.md  Dockerfile  FINAL_STATUS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_REPORT.md  IMPROVEMENTS.md  LICENSE  PROJECT_COMPLETE.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  Procfile  QUICK_REFERENCE.md  QUICK_START.md  README.md  README.md.backup  RELEASE_NOTES_v2.0.md  REQUIREMENTS_CHECKLIST.md  ROADMAP.md  SECURITY.md  STREAMLIT_README.md  VERCEL_FIX.md  analyzer.py  api.py  app.py  app_clean.py  app_final.py  app_new.py  app_old.py  check_deployment.py  config.py  dashboard.html  (+27 more)
.github/: codeql-config.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  good_first_issue.md
.github/workflows/: ci.yml  codeql.yml
.streamlit/: config.toml
api/: analyze.py  analyzer.py  config.py  index.py  requirements.txt
archive/legacy/: legacy_api.py  legacy_config.py
assets/css/: main.css  pages.css  styles.css
assets/js/: app.js  main.js  placeholder.js
backend/: __init__.py  app.py  keyword_matcher.py  pdf_extractor.py  resume_analyzer.py
docs/: API.md  CONTRIBUTING.md  DEPLOYMENT.md
frontend/: index.html  test.html
scripts/: setup.ps1  setup.sh  vercel-build.sh
src/: __init__.py  analyzer.py  config.py
tests/: conftest.py  run_smoke.sh  test_analyzer.py  test_api.py  test_app.py  test_comprehensive.py  test_resume_analyzer.py  test_smoke.py
(+6 files in other folders)
