[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-resume-analyzer"
version = "1.0.0"
description = "AI Resume Analyzer"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",
    "PyPDF2>=3.0.1",
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.1.0",
    "mangum>=0.17.0",
]
